--- a/index.html
+++ b/index.html
@@ -34,31 +34,35 @@
 			</items-button>
 		</header-buttons>
 	</header>
-	<div class="banner">
-		<h1>Get Your Best Cosmetic<br>
-			Product Here</h1>
-		<br>
-		<p>Lorem Ipsum is simply dummy text of the printing and<br>
-			typesetting industry. Lorem Ipsum has been the industry's<br>
-			standard dummy</p>
-
-		<div class="d2">
-			<form>
-				<input type="text" placeholder="Search...">
-				<button type="submit" class="fa fa-search"></button>
-			</form>
-		</div>
-		<a class="btn" href="#">Shop now</a>
-
-		<a href="#">
-			<div class="arrow arrow-left"></div>
-		</a>
-		<a href="#">
-			<div class="arrow arrow-right"></div>
-		</a>
-	</div>
 
 	<main>
+
+		<div class="banner">
+			<h1>Get Your Best Cosmetic<br>
+				Product Here</h1>
+			<br>
+			<p>Lorem Ipsum is simply dummy text of the printing and<br>
+				typesetting industry. Lorem Ipsum has been the industry's<br>
+				standard dummy</p>
+	
+			<div class="d2">
+				<form>
+					<input type="text" placeholder="Search...">
+					<button type="submit" class="fa fa-search"></button>
+				</form>
+			</div>
+			<a class="btn" href="#">Shop now</a>
+	
+	
+			<a href="#">
+				<div class="arrow arrow-left"></div>
+			</a>
+			<a href="#">
+				<div class="arrow arrow-right"></div>
+			</a>
+	
+		</div>
+
 		<div class="sponsors">
 			<div><a href="#"><img src="img/Airbnb.png" alt="logo"></a></div>
 			<div><a href="#"><img src="img/Hubspot.png" alt="logo"></a></div>
@@ -75,7 +79,7 @@
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
 						Lorem Ipsum has been the industry's standard dummy</p>
 
-					<a href="#" class="">
+					<a href="#">
 						<img src="img/text-arrow.png">
 					</a>
 				</div>
@@ -90,16 +94,17 @@
 								typesetting industry. Lorem Ipsum has been the industry's<br>
 								standard dummy</p>
 							<div class="btn-price">
-									<a href="#" class="btn-buy">
-										<p>Buy Now</p>
-									</a>
-									<a href="#" class="btn-cart">
-										<p>Add To Cart</p>
-									</a>
+								<a href="#" class="btn-buy">
+									<p>Buy Now</p>
+								</a>
+								<a href="#" class="btn-cart">
+									<p>Add To Cart</p>
+								</a>
 								<h1 class="price">$120</h1>
 							</div>
 						</div>
 					</div>
+
 					<div class="product-right">
 						<img src="img/right_bottel.png" alt="image">
 
@@ -109,12 +114,12 @@
 								typesetting industry. Lorem Ipsum has been the industry's<br>
 								standard dummy</p>
 							<div class="btn-price">
-									<a href="#" class="btn-buy">
-										<p>Buy Now</p>
-									</a>
-									<a href="#" class="btn-cart">
-										<p>Add To Cart</p>
-									</a>
+								<a href="#" class="btn-buy">
+									<p>Buy Now</p>
+								</a>
+								<a href="#" class="btn-cart">
+									<p>Add To Cart</p>
+								</a>
 								<h1 class="price">$120</h1>
 							</div>
 						</div>
@@ -122,6 +127,30 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="user-reviews">
+			<div class="user-reviews_items">
+				<h1>100%</h1>
+				<p>Organic Products</p>
+			</div>
+			<div class="user-reviews_items">
+				<h1>2M+</h1>
+				<p>Yearly Sales</p>
+			</div>
+			<div class="user-reviews_items">
+				<h1>1.9M+</h1>
+				<p>Happy Customar</p>
+			</div>
+		</div>
+
+		<!--<div class="AboutProduct"> "finish block the Adout Product"
+			<img src="img/infoproduct.png">
+			<h1></h1>
+			<p></p>
+			<p></p>
+			<button></button>
+		</div>-->
+
 	</main>
 </body>
 
