--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
 			<p>Lorem Ipsum is simply dummy text of the printing and<br>
 				typesetting industry. Lorem Ipsum has been the industry's<br>
 				standard dummy</p>
-	
+
 			<div class="d2">
 				<form>
 					<input type="text" placeholder="Search...">
-					<button type="submit" class="fa fa-search"></button>
+					<button type="submit" class="btn-h"></button>
 				</form>
 			</div>
-			<a class="btn" href="#">Shop now</a>
-	
-	
+			<a class="btn btn-h href="#">Shop now</a>
+
+
 			<a href="#">
 				<div class="arrow arrow-left"></div>
 			</a>
 			<a href="#">
 				<div class="arrow arrow-right"></div>
 			</a>
-	
+
 		</div>
 
 		<div class="sponsors">
@@ -84,7 +84,7 @@
 					</a>
 				</div>
 
-				<div class="product-content">
+				<div class="product-cart">
 					<div class="product-left">
 						<img src="img/left_bottle.png" alt="image">
 
@@ -94,10 +94,10 @@
 								typesetting industry. Lorem Ipsum has been the industry's<br>
 								standard dummy</p>
 							<div class="btn-price">
-								<a href="#" class="btn-buy">
+								<a href="#" class="btn-buy btn-h">
 									<p>Buy Now</p>
 								</a>
-								<a href="#" class="btn-cart">
+								<a href="#" class="btn-cart btnw-h">
 									<p>Add To Cart</p>
 								</a>
 								<h1 class="price">$120</h1>
@@ -114,10 +114,10 @@
 								typesetting industry. Lorem Ipsum has been the industry's<br>
 								standard dummy</p>
 							<div class="btn-price">
-								<a href="#" class="btn-buy">
+								<a href="#" class="btn-buy btn-h">
 									<p>Buy Now</p>
 								</a>
-								<a href="#" class="btn-cart">
+								<a href="#" class="btn-cart btnw-h">
 									<p>Add To Cart</p>
 								</a>
 								<h1 class="price">$120</h1>
@@ -143,13 +143,19 @@
 			</div>
 		</div>
 
-		<!--<div class="AboutProduct"> "finish block the Adout Product"
+		<div class="AboutProduct">
+			<div class=".AboutProduct__info">
+				<h1>The Perfect Beauty<br> Of You</h1>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry. Lorem Ipsum has been the
+					industry's standard dummy text <br> ever since the 1500s, when an unknown printer took a galley of type <br>
+					and scrambled it to make a type specimen book.</p>
+				<p>It has survived not only five centuries, but also the leap into electronic <br> typesetting, remaining
+					essentially unchanged. Lorem Ipsum is simply <br> dummy text of the printing and typesetting industry.
+				</p>
+				<button class="btn-h">Shop Now</button>
+			</div>
 			<img src="img/infoproduct.png">
-			<h1></h1>
-			<p></p>
-			<p></p>
-			<button></button>
-		</div>-->
+		</div>
 
 	</main>
 </body>
