--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
 			<div class="d2">
 				<form>
-					<input type="text" placeholder="Search...">
+					<input type="text" placeholder="Search..." class="input-hover_focus">
 					<button type="submit" class="btn-h"></button>
 				</form>
 			</div>
-			<a class="btn btn-h href="#">Shop now</a>
+			<a class="btn btn-h href=" #">Shop now</a>
 
 
 			<a href="#">
@@ -146,18 +146,121 @@
 		<div class="AboutProduct">
 			<div class=".AboutProduct__info">
 				<h1>The Perfect Beauty<br> Of You</h1>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry. Lorem Ipsum has been the
-					industry's standard dummy text <br> ever since the 1500s, when an unknown printer took a galley of type <br>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry. Lorem Ipsum has been
+					the
+					industry's standard dummy text <br> ever since the 1500s, when an unknown printer took a galley of
+					type <br>
 					and scrambled it to make a type specimen book.</p>
-				<p>It has survived not only five centuries, but also the leap into electronic <br> typesetting, remaining
-					essentially unchanged. Lorem Ipsum is simply <br> dummy text of the printing and typesetting industry.
+				<p>It has survived not only five centuries, but also the leap into electronic <br> typesetting,
+					remaining
+					essentially unchanged. Lorem Ipsum is simply <br> dummy text of the printing and typesetting
+					industry.
 				</p>
 				<button class="btn-h">Shop Now</button>
 			</div>
 			<img src="img/infoproduct.png">
 		</div>
 
+		<div class="AboutMaster">
+			<img src="img/master-cosmetic.png">
+			<div class="infoMaster">
+				<h1>Amazing Cosmetic</h1>
+				<div class="rating">
+					<div class="rating-items">
+						<input id="rating-5" class="rating-items__item" type="radio" value="5">
+						<label for="rating-5" class="rating-items__label"></label>
+						<input id="rating-4" class="rating-items__item" type="radio" value="4">
+						<label for="rating-4" class="rating-items__label"></label>
+						<input id="rating-3" class="rating-items__item" type="radio" value="3">
+						<label for="rating-3" class="rating-items__label"></label>
+						<input id="rating-2" class="rating-items__item" type="radio" value="2">
+						<label for="rating-2" class="rating-items__label"></label>
+						<input id="rating-1" class="rating-items__item" type="radio" value="1">
+						<label for="rating-1" class="rating-items__label"></label>
+					</div>
+				</div>
+				<q><span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+						the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+						of type and scrambled it to make a type specimen book</span></q>
+				<h1>Rusmin Islam</h1>
+				<p>Designer</p>
+				<div class="Round-Arrows">
+					<div class="arrow_circle__block">
+						<a href="#">
+							<div class="arrow_circle circle__left">
+								<div class="arrow__left" id="arrow"></div>
+							</div>
+						</a>
+						<a href="#">
+							<div class="arrow_circle circle__right">
+								<div class="arrow__right" id="arrow"></div>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
+
+	<footer>
+		<div class="top-footer">
+			<h1>Subscribe to Get Our Letest News</h1>
+			<div class="email-form">
+				<form class="Subscribe-form">
+					<input type="text" placeholder="Enter email" class="input-hover_focus">
+					<button type="submit" class="btn-h">Subscribe</button>
+				</form>
+			</div>
+		</div>
+		<div class="bottom-footer">
+			<div class="Dudeshape-foter-info">
+				<img src="img/Dudeshape-f.png">
+				<div>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+						the
+						industry's standard dummy</p>
+				</div>
+			</div>
+			<div class="Quick-Links">
+				<h3>Quick Link</h3>
+				<div>
+					<p>
+						<a href="#">Home</a>
+					</p>
+					<p>
+						<a href="#">Products</a>
+					</p>
+					<p>
+						<a href="#">About Us</a>
+					</p>
+				</div>
+			</div>
+			<div class="Contact-info">
+				<h3>Contact Us</h3>
+				<div>
+					<p>
+						<a href="#">oyasimnaeem@email.com</a>
+					</p>
+					<p>
+						<a href="#">+123456789</a>
+					</p>
+					<div class="cocial-netwoeks">
+						<div class="cocial-netwoeks__item">
+							<a href="#">
+								<img src="img/facebook.svg">
+							</a>
+							<a href="#">
+								<img src="img/twitter.svg">
+							</a>
+							<a href="#">
+								<img src="img/instagram.svg">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
